# specials-agent

./: .gitignore  QUICK_REFERENCE.md  RASPBERRY_PI_SETUP.md  README.md  improvements.md  pyproject.toml  requirements_dev.txt  setup_session.py  snippet.txt  watchlist.xlsx  watchlist.yaml  watchlist_email_indices_test.xlsx  watchlist_email_indices_test.yaml  watchlist_rebuilt.xlsx  watchlist_rename_check.xlsx  watchlist_sparse.xlsx
.github/: copilot-instructions.md
abandoned/: ALTERNATIVE_METHODS.md  COOKIE_GUIDE.md  SCRAPING_GUIDE.md  environment.yml  inspect_selectors.py  test_configurations.py
abandoned/src/: __init__.py  email_parser.py  lasoo_scraper.py  main.py
abandoned/tests/: __init__.py  test_main.py
config/: api_usage.json  email_config.yaml.example  limits.yaml  limits.yaml.example  secrets.example.yaml  specials_freshness.yaml.example
scripts/: build_excel_tools.ps1
src/: export_watchlist_to_excel.py  import_watchlist_from_excel.py  main.py  pdf_parser.py  specials_checker.py  watchlist_excel_export.py  watchlist_excel_import.py
